compile_errors_v8.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0425]: cannot find value `circuit_breaker` in this scope
   --> src/actors/erinyes/recovery.rs:299:22
    |
299 |         let mut cb = circuit_breaker.write().await;
    |                      ^^^^^^^^^^^^^^^
    |
help: you might have meant to use the available field
    |
299 |         let mut cb = self.circuit_breaker.write().await;
    |                      +++++

error[E0425]: cannot find type `Arc` in this scope
  --> src/infrastructure/surreal.rs:53:13
   |
53 |     client: Arc<tokio::sync::RwLock<Option<surrealdb::Surreal<surrealdb::engine::any::Any...
   |             ^^^ not found in this scope
   |
help: consider importing this struct
   |
 5 + use std::sync::Arc;
   |

error[E0433]: failed to resolve: use of undeclared type `Arc`
  --> src/infrastructure/surreal.rs:60:21
   |
60 |             client: Arc::new(tokio::sync::RwLock::new(None)),
   |                     ^^^ use of undeclared type `Arc`
   |
help: consider importing this struct
   |
 5 + use std::sync::Arc;
   |

error[E0425]: cannot find type `Arc` in this scope
   --> src/infrastructure/surreal.rs:161:31
    |
161 | pub type SharedSurrealStore = Arc<SurrealStore>;
    |                               ^^^ not found in this scope
    |
help: consider importing this struct
    |
  5 + use std::sync::Arc;
    |

warning: unused import: `watch`
 --> src/actors/zeus/mod.rs:8:44
  |
8 | use tokio::sync::{RwLock, broadcast, mpsc, watch};
  |                                            ^^^^^
